# ls_blk_gtk

lsblk-gtk/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
lsblk-gtk/.anjuta/: default.profile
lsblk-gtk/.anjuta/session/: anjuta.session  dock-layout.xml
lsblk-gtk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lsblk-gtk/src/: Makefile.am  Makefile.in  lsblk_gtk.ui  main-window.cpp  main-window.cpp~  main-window.h  main-window.h~  main.cpp  main.cpp~  partitions-provider.cpp  partitions-provider.cpp~  partitions-provider.h  partitions-provider.h~  provider-listener.h
